Working IntGenerator.